# tui-dashboard

./: Cargo.toml
.github/ISSUE_TEMPLATE/: bug_report.md
src/: lib.rs
